Change to Hover states

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -49,7 +49,9 @@
             </nav>
         </header>
         
-        <section id="slider"></section>
+        <section id="slider">
+            <h1>Bien Vieillir</h1>
+        </section>
 
 
 
