Changement H1 - Placé autour du Logo

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -34,7 +34,7 @@
     <main>
         
         <header>
-            <img src="../assets/img/logo_silver_act.png" alt="" >
+            <h1><img src="../assets/img/logo_silver_act.png" alt="Silver Act Logo" ></h1>
             <nav >
                 <ul class="center-col">
                     <li></li>
